# m365-custom-engine-agents

./: .gitignore  CONTRIBUTING.md  README.md
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt  sample.env  semantic_kernel_blog_writer.ipynb
cea-proxy-py/: README.md  pyproject.toml  sample.env
cea-proxy-py/appPackage/: manifest.json
cea-proxy-py/infra/: azure.parameters.json
cea-proxy-py/src/: agent.py  app.py  config.py  requirements.txt
cea-proxy-ts/: m365agents.local.yml  m365agents.playground.yml  m365agents.yml  package-lock.json  package.json  tsconfig.json
cea-proxy-ts/appPackage/: manifest.json
cea-proxy-ts/infra/: azure.parameters.json
cea-proxy-ts/src/: adapter.ts  agent.ts  index.ts
docs/: custom-engine-agents-in-m365-copilot.md
