[project]
name = "m365-custom-engine-agent-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-agents==1.1.0b4",
    "azure-identity>=1.23.1",
    "fastapi>=0.116.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "semantic-kernel[mcp]>=1.35.1",
    "uvicorn>=0.35.0",
]
