[project]
name = "frontend-py"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "microsoft-agents-activity>=0.1.2",
    "microsoft-agents-authentication-msal>=0.1.2",
    "microsoft-agents-hosting-aiohttp>=0.1.2",
    "microsoft-agents-hosting-core>=0.1.2",
]
